force-app/main/default/objects/Compliance_Audit_Request__c/Compliance_Audit_Request__c.object-meta.xml
<CustomObject>
    <description>Marketing Compliance that tracks a customers marketing violations</description>
    <label>Digital Compliance</label>
    <nameField>
        <label>Compliance Program Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Compliances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>