force-app/main/default/objects/Compliance_Audit_Request__c/fields/Branded_URL__c.field-meta.xml
<CustomField>
    <fullName>Branded_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branded URL</label>
    <type>Checkbox</type>
</CustomField>