force-app/main/default/objects/Compliance_Audit_Request__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Website</label>
    <type>Checkbox</type>
</CustomField>