force-app/main/default/objects/Compliance_Audit_Request__c/fields/External_Compliance_Audit_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Compliance_Audit_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Compliance Audit ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>