force-app/main/default/objects/Compliance_Audit_Request__c/fields/Generic_URL__c.field-meta.xml
<CustomField>
    <fullName>Generic_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic URL</label>
    <type>Checkbox</type>
</CustomField>