force-app/main/default/objects/Compliance_Audit_Request__c/fields/Generic_URL_with_Logo__c.field-meta.xml
<CustomField>
    <fullName>Generic_URL_with_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic URL with Logo</label>
    <type>Checkbox</type>
</CustomField>