force-app/main/default/objects/Compliance_Audit_Request__c/fields/Infraction_Type__c.field-meta.xml
<CustomField>
    <fullName>Infraction_Type__c</fullName>
    <label>Infraction Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>