force-app/main/default/objects/Compliance_Audit_Request__c/fields/Lead_Collection__c.field-meta.xml
<CustomField>
    <fullName>Lead_Collection__c</fullName>
    <label>Lead Collection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Click to Call</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Messenger</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>