force-app/main/default/objects/Compliance_Audit_Request__c/fields/List_Microsite__c.field-meta.xml
<CustomField>
    <fullName>List_Microsite__c</fullName>
    <label>List Microsite</label>
    <type>Url</type>
</CustomField>