force-app/main/default/objects/Compliance_Audit_Request__c/fields/List_Url__c.field-meta.xml
<CustomField>
    <fullName>List_Url__c</fullName>
    <label>List Url</label>
    <type>Url</type>
</CustomField>