force-app/main/default/objects/Compliance_Audit_Request__c/fields/Marketing_Compliance_Complete__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Compliance_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Compliance Complete</label>
    <type>Checkbox</type>
</CustomField>