force-app/main/default/objects/Compliance_Audit_Request__c/fields/Paid_Search__c.field-meta.xml
<CustomField>
    <fullName>Paid_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Search</label>
    <type>Checkbox</type>
</CustomField>