force-app/main/default/objects/Compliance_Audit_Request__c/fields/Paid_Search_Approved__c.field-meta.xml
<CustomField>
    <fullName>Paid_Search_Approved__c</fullName>
    <label>Paid Search Approved</label>
    <type>Date</type>
</CustomField>