force-app/main/default/objects/Compliance_Audit_Request__c/fields/Sales_Codes_Paused__c.field-meta.xml
<CustomField>
    <fullName>Sales_Codes_Paused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Codes Paused</label>
    <type>Checkbox</type>
</CustomField>