force-app/main/default/objects/Compliance_Audit_Request__c/fields/select_one__c.field-meta.xml
<CustomField>
    <fullName>select_one__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Audit</fullName>
            </value>
            <value>
                <fullName>Waiting on Dealer</fullName>
            </value>
            <value>
                <fullName>Marketing Approved</fullName>
            </value>
            <value>
                <fullName>Marketing Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>