force-app/main/default/objects/Compliance_Audit_Request__c/fields/Social_Media_Approved__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Approved__c</fullName>
    <label>Social Media Approved</label>
    <type>Date</type>
</CustomField>