force-app/main/default/objects/Compliance_Audit_Request__c/fields/Social_Media_Page__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Page__c</fullName>
    <label>Social Media Page</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>