force-app/main/default/objects/Compliance_Audit_Request__c/fields/Third_party_companies__c.field-meta.xml
<CustomField>
    <fullName>Third_party_companies__c</fullName>
    <inlineHelpText>List any third-party companies that will be utilized for leads, sales, or marketing</inlineHelpText>
    <label>Third-party companies</label>
    <type>TextArea</type>
</CustomField>