force-app/main/default/objects/Compliance_Audit_Request__c/fields/Website_Approved__c.field-meta.xml
<CustomField>
    <fullName>Website_Approved__c</fullName>
    <label>Website Approved</label>
    <type>Date</type>
</CustomField>