force-app/main/default/objects/Compliance_Audit_Request__c/fields/X30_day_follow_up__c.field-meta.xml
<CustomField>
    <fullName>X30_day_follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>30 day follow up</label>
    <type>Checkbox</type>
</CustomField>